fix: domain-agnostic Teach Back scoring via per-lesson keywords (#7)
* Add Stripe payments, Natural Sciences content, and fix stale user state

Stripe payment integration:
- Add stripe-java 26.4.0 dependency to pom.xml
- Add V20 Flyway migration: subscription_status, subscription_period_end,
  stripe_customer_id, stripe_subscription_id columns on users table
- Add SubscriptionStatus enum (FREE, MONTHLY, ANNUAL, LIFETIME, CANCELLED)
- Extend User entity with subscription fields and hasActiveSubscription()
- New payment module: PaymentService, PaymentController, StripeWebhookController,
  StripeConfig, StripeProperties, PlanType, and DTOs
- Handles checkout (SUBSCRIPTION mode for monthly/annual, PAYMENT for lifetime),
  customer portal, status endpoint, and webhook event processing
- Permit /api/webhooks/** in SecurityConfig for unauthenticated Stripe callbacks
- Expose subscriptionStatus and bypassPaywall on AuthResponse and AdminUserDto
- Frontend: UpgradeModal with Monthly/Annual/Lifetime plan cards
- Frontend: paymentsApi (createCheckout, createPortal, getStatus) in services.ts
- Frontend: hasActiveSubscription() helper in shared types
- Homepage: locked topic click opens UpgradeModal; handles ?payment= return params
- ProfilePage: Subscription tab with plan info, period end, and billing portal CTA

Fix bypassPaywall/subscriptionStatus not updating without re-login:
- Add GET /api/auth/me endpoint returning a fresh AuthResponse from the DB
- Add authApi.me() in services.ts
- useAuth: useEffect on mount calls /api/auth/me and persists fresh data,
  so admin changes to bypassPaywall take effect immediately
- client.ts token refresh now also syncs bypassPaywall and subscriptionStatus
  from the refresh response

Natural Sciences LEAD content:
- Add sci-lea-1 through sci-lea-17 JSON chunk files for the Sciences discipline

* Add react and tailwind content and fixed some Mobile UX issues

* Removed old code and updated variables and added a Project reference file for t